@@ -4,7 +4,8 @@ Changelog
 1.0 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fix MIMEText compatibility (broken since 0.9).
+  [jone]
 
 
 0.9 (2015-07-10)
